test_scores/negative_dimers/features/Q92911.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q92911.pkl.xz